change image path

--- a/_posts/2012-10-23-trie.md
+++ b/_posts/2012-10-23-trie.md
@@ -8,7 +8,7 @@ tags: trie
 
 <!--more-->
 
-![Trie](http://img.my.csdn.net/uploads/201304/26/1366957467_6192.PNG)
+![Trie](media/img/2012-10-23-1.jpg)
 
 ### 介绍
 
