--- a/_posts/2012-10-23-trie.md
+++ b/_posts/2012-10-23-trie.md
@@ -2,6 +2,7 @@
 layout: post
 title: 元芳，我是这么理解Trie树的
 tags: trie
+categories: php
 ---
 
 如图，该trie树有abc、d、da、dda四个字符串，如果是字符串会在节点的尾部进行标记，没有后续字符的分支指向NULL。
