--- a/_posts/2014-07-16-viavia.md
+++ b/_posts/2014-07-16-viavia.md
@@ -13,7 +13,8 @@ categories: distraction
 
 那也曾是我的模样  
 
-<br><br>
+<!--more-->
+<br>
 
 沸腾着的 不安着的  
 
@@ -23,9 +24,7 @@ categories: distraction
 
 故事你真的在听吗  
 
-<!--more-->
-
-<br><br>
+<br>
 
 我曾经跨过山和大海 也穿过人山人海  
 
@@ -35,7 +34,7 @@ categories: distraction
 
 直到看见平凡才是唯一的答案  
 
-<br><br>
+<br>
 
 当你仍然 还在幻想  
 
@@ -45,7 +44,7 @@ categories: distraction
 
 对我而言是另一天  
 
-<br><br>
+<br>
 
 我曾经毁了我的一切 只想永远地离开  
 
@@ -55,7 +54,7 @@ categories: distraction
 
 绝望着渴望着哭着笑着平凡着  
 
-<br><br>
+<br>
 
 向前走 就这么走 就算你被给过什么  
 
@@ -65,7 +64,7 @@ categories: distraction
 
 向前走 就这么走 就算你会  
 
-<br><br>
+<br>
 
 我曾经跨过山和大海 也穿过人山人海  
 
@@ -75,7 +74,7 @@ categories: distraction
 
 直到看见平凡才是唯一的答案  
 
-<br><br>
+<br>
 
 我曾经毁了我的一切 只想永远地离开  
 
@@ -85,7 +84,7 @@ categories: distraction
 
 绝望着渴望着哭着笑着平凡着  
 
-<br><br>
+<br>
 
 我曾经跨过山和大海 也穿过人山人海  
 
@@ -95,7 +94,7 @@ categories: distraction
 
 冥冥中这是我唯一要走的路啊  
 
-<br><br>
+<br>
 
 时间无言 如此这般  
 
@@ -105,6 +104,10 @@ categories: distraction
 
 你的故事讲到了哪  
 
+<br>
+
 ![][1]
+
+<embed src="http://vimg.ifeng.com/swf/musicplayer.swf" width="500" height="37" name="fplay" allowfullscreen="true" wmode="transparent" allowscriptaccess="always" flashvars="guid=11160150-0de1-4082-a98f-f9b064de39f1&amp;from=yue&amp;AutoPlay=false&amp;clickPlay=true&amp;uid=1400145195083_163js06432&amp;sid=&amp;locid=&amp;pageurl=http://yue.ifeng.com/listen/neidi/detail_2014_07/16/37360645_0.shtml" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer">
 
 [1]: http://bikethru.com/media/img/2014-07-16-viavia.png
